--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 id="count">0</h1>
     <button id="decrease">Decrease</button>
     <button id="increase">Increase</button>
+    <button id="update" style="display:none;">Update</button>
   </div>
 
   <script src="index.js"></script>
